--- a/themba's-portfolio.html
+++ b/themba's-portfolio.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Themba's portfolio</title>
-    <link rel="stylesheet" href="styles.css/themba's portfolio.css">
+    <link rel="stylesheet" href="themba's portfolio.css">
   </head>
   
   <body>
@@ -116,15 +116,21 @@
           <a href="https://www.instagram.com/thiza_alkaline10?igsh=MTdkbmJpeGwxNGJoMQ%3D%3D&utm_source=qr">
             <img src="images/icons8-instagram-50.png">
           </a>
-          <a href="https://www.linkedin.com/in/themba-malinga-b3b13b2aa?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
+          <a href="#">
+            <img src="images/icons8-facebook-50.png">
+          </a>
+          <a href="#">
             <img src="images/icons8-linkedin-50.png">
           </a>
-          <a  class="js-wa-icon">
+          <a href="#">
+            <img src="images/icons8-twitterx-50.png">
+          </a>
+          <a  class="js-wa-icon" href="">
             <img src="images/icons8-whatsapp-50.png">
           </a>
         </div>
       </div>
 
-    <script src="scripts/themba's portfolio.js"></script>
+    <script src="themba's portfolio.js"></script>
   </body>
 </html>
