Updating link of files

--- a/themba's-portfolio.html
+++ b/themba's-portfolio.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Themba's portfolio</title>
-    <link rel="stylesheet" href="themba's portfolio.css">
+    <link rel="stylesheet" type="text/css" href="styles.css/themba's portfolio.css">
   </head>
   
   <body>
@@ -125,12 +125,12 @@
           <a href="#">
             <img src="images/icons8-twitterx-50.png">
           </a>
-          <a  class="js-wa-icon" href="">
+          <a  class="js-wa-icon">
             <img src="images/icons8-whatsapp-50.png">
           </a>
         </div>
       </div>
 
-    <script src="themba's portfolio.js"></script>
+    <script src="scripts/themba's portfolio.js"></script>
   </body>
 </html>
