--- a/index.html
+++ b/index.html
@@ -116,14 +116,9 @@
           <a href="https://www.instagram.com/thiza_alkaline10?igsh=MTdkbmJpeGwxNGJoMQ%3D%3D&utm_source=qr">
             <img src="images/icons8-instagram-50.png">
           </a>
-          <a href="#">
-            <img src="images/icons8-facebook-50.png">
-          </a>
-          <a href="#">
+         
+          <a href="https://www.linkedin.com/in/themba-malinga-b3b13b2aa?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
             <img src="images/icons8-linkedin-50.png">
-          </a>
-          <a href="#">
-            <img src="images/icons8-twitterx-50.png">
           </a>
           <a  class="js-wa-icon">
             <img src="images/icons8-whatsapp-50.png">
