Final touch - adding media

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <ul>
         <li> <a href="#">
-          <img class="nav-logo" src="images/20240127_004650_0000.png">
+          <img class="nav-logo" src="images/Logo.png">
         </a> </li>
         <li class="hideOnMobile"> <a href="#Home">Home</a> </li>
         <li class="hideOnMobile"> <a href="#About">About</a> </li>
@@ -40,7 +40,7 @@
           <div class="break-text">Advisor</div>
         </div>
         <div class="picture-div">
-          <img class="picture-of-themba" src="images/IMG_20240126_175609.png">
+          <img class="picture-of-themba" src="images/Home-picture.png">
         </div>
       </div>
     </div>
@@ -114,14 +114,13 @@
 
         <div class="contact-icons-container">
           <a href="https://www.instagram.com/thiza_alkaline10?igsh=MTdkbmJpeGwxNGJoMQ%3D%3D&utm_source=qr">
-            <img src="images/icons8-instagram-50.png">
+            <img src="images/Instagram-logo.png">
           </a>
-         
           <a href="https://www.linkedin.com/in/themba-malinga-b3b13b2aa?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app">
-            <img src="images/icons8-linkedin-50.png">
+            <img src="images/Linked-in-logo.png">
           </a>
           <a  class="js-wa-icon">
-            <img src="images/icons8-whatsapp-50.png">
+            <img src="images/Whatsapp-logo.png">
           </a>
         </div>
       </div>
